--- a/news.html
+++ b/news.html
@@ -22,7 +22,7 @@
         <p class="logo-slogan">All your Elsword needs in one place.</p>
     </div>
     <nav class="navbar navbar-dark navbar-expand-lg bg-black">
-        <a class="navbar-brand active" href="index.html">
+        <a class="navbar-brand" href="index.html">
             <svg class="bi bi-house" style="margin-bottom: 6px;" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path fill-rule="evenodd" d="M2 13.5V7h1v6.5a.5.5 0 00.5.5h9a.5.5 0 00.5-.5V7h1v6.5a1.5 1.5 0 01-1.5 1.5h-9A1.5 1.5 0 012 13.5zm11-11V6l-2-2V2.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5z" clip-rule="evenodd"/>
                 <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 011.414 0l6.647 6.646a.5.5 0 01-.708.708L8 2.207 1.354 8.854a.5.5 0 11-.708-.708L7.293 1.5z" clip-rule="evenodd"/>
@@ -34,10 +34,10 @@
         </a>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
-                <a class="nav-item nav-link" href="news.html">News</a>
+                <a class="nav-item nav-link active" href="news.html">News</a>
                 <a class="nav-item nav-link" href="market.html">Market</a>
-                <a class="nav-item nav-link" href="">Calculators</a>
-                <a class="nav-item nav-link" href="#">FAQ</a>
+                <a class="nav-item nav-link" href="calculators.html">Calculators</a>
+                <a class="nav-item nav-link" href="faq.html">FAQ</a>
             </div>
         </div>
     </nav>
