--- a/market.html
+++ b/market.html
@@ -10,6 +10,7 @@
     <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
+    <link rel="manifest" href="/site.webmanifest">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Product+Sans">
@@ -18,8 +19,8 @@
 </head>
 <body>
     <div class="container-fluid">
-        <h1 class="logo">blurry.</h1>
-        <p class="logo-slogan">All your Elsword needs in one place.</p>
+        <h1 class="header">blurry.</h1>
+        <p class="header-subtext">All your Elsword needs in one place.</p>
     </div>
     <nav class="navbar navbar-dark navbar-expand-lg bg-black">
         <a class="navbar-brand" href="index.html">
