--- a/index.html
+++ b/index.html
@@ -7,10 +7,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <link rel="apple-touch-icon" sizes="180x180" href="icon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="icon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="icon/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
+    <link rel="icon" type="image/x-icon" href="favicon/favicon.ico" sizes="16x16">
     <link rel="stylesheet" href="main.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Product+Sans">
@@ -37,18 +34,57 @@
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="news.html">News</a>
                 <a class="nav-item nav-link" href="market.html">Market</a>
-                <a class="nav-item nav-link" href="">Calculators</a>
-                <a class="nav-item nav-link" href="#">FAQ</a>
+                <a class="nav-item nav-link" href="calculators.html">Calculators</a>
+                <a class="nav-item nav-link" href="faq.html">FAQ</a>
             </div>
         </div>
     </nav>
-    <div class="container-fluid">
-        <div class="fadein-bottom">
-            <h2 class="header header-body display-4">Welcome to blurry.</h2>
-            <p class="lead fadein-bottom anim-delay">Your foremost place for Elsword related things.</p>
-        </div>
-        <div>
-
+    <div class="container-fluid bg-skin" style="padding-top: 15px;">
+        <div class="jumbotron jumbotron-fluid content-main" style="background-color: rgba(255,255,255,0.7);">
+            <div class="card-body fadein-bottom">
+                <p class="header header-body display-4">Welcome to blurry.</p>
+                <p class="lead fadein-bottom">First things first...</p>
+                <p class="fadein-bottom" style="width: 50rem;">
+                    Welcome! This website is dedicated to all things Elsword!
+                    Some upcoming features will include a functioning stat calculator similar to the one that Ashal has, 
+                    a player marketplace, and a comprehensive FAQ page. Lots to look forward to, and a much more user-friendly feel on the side!
+                    Be sure to check out the News it includes both NA and KR!
+                </p>
+                <div class="card fadein-bottom" style="width: 40rem;">
+                    <div class="card-body">
+                        <h2 class="header">Changelog</h2>
+                        <p class="fadein-bottom">
+                            v0.0.2
+                            <p class="fadein-bottom">
+                                4-21-2020
+                                <div class="fadein-bottom">
+                                    <li>Added cool new header!</li>
+                                    <li>Added super handy navigation bar!</li>
+                                    <li>Created placeholder pages for everything on the navbar!</li>
+                                    <li>Generated cool new favicon!</li>
+                                    <li>Birthed this ungodly front page!</li>
+                                    <li>Added a Changelog</li>
+                                    <li>Created To-do List</li>
+                                    <li>Placed a placeholder background</li>
+                                    <div class="card" style="width: 20rem; margin-top: 20px;">
+                                        <div class="card-body">
+                                            <h4 class="header" style="margin: 0;">To-do</h4>
+                                            <li>Functioning News Page</li>
+                                            <li>Functioning Marketplace</li>
+                                            <li>Functioning Calculator</li>
+                                            <li>Comprehensive FAQ</li>
+                                        </div>
+                                    </div>
+                                </div>
+                            </p>
+                        </p>
+                    </div>
+                </div>
+            </div>
+            <div class="footer">
+                <p>All lolis belong to Seth...</p>
+                <p>Copyright Elsword Guild, all rights reserved.</p>
+            </div>
         </div>
     </div>
 </body>
