--- a/calculators.html
+++ b/calculators.html
@@ -39,6 +39,7 @@
                 <a class="nav-item nav-link" href="market.html">Market</a>
                 <a class="nav-item nav-link active" href="calculators.html">Calculators</a>
                 <a class="nav-item nav-link" href="faq.html">FAQ</a>
+                <a class="nav-item nav-link" href="https://elwiki.net/">Wiki</a>
             </div>
         </div>
     </nav>
