--- a/index.html
+++ b/index.html
@@ -25,25 +25,26 @@
                 <path fill-rule="evenodd" d="M2 13.5V7h1v6.5a.5.5 0 00.5.5h9a.5.5 0 00.5-.5V7h1v6.5a1.5 1.5 0 01-1.5 1.5h-9A1.5 1.5 0 012 13.5zm11-11V6l-2-2V2.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5z" clip-rule="evenodd"/>
                 <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 011.414 0l6.647 6.646a.5.5 0 01-.708.708L8 2.207 1.354 8.854a.5.5 0 11-.708-.708L7.293 1.5z" clip-rule="evenodd"/>
               </svg>
-              <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              </button>
         </a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
             <div class="navbar-nav">
                 <a class="nav-item nav-link" href="news.html">News</a>
                 <a class="nav-item nav-link" href="market.html">Market</a>
                 <a class="nav-item nav-link" href="calculators.html">Calculators</a>
                 <a class="nav-item nav-link" href="faq.html">FAQ</a>
+                <a class="nav-item nav-link" href="https://elwiki.net/">Wiki</a>
             </div>
         </div>
     </nav>
-    <div class="container-fluid bg-skin" style="padding-top: 15px;">
+    <div class="container-fluid bg-skin">
         <div class="jumbotron jumbotron-fluid content-main" style="background-color: rgba(255,255,255,0.7);">
             <div class="card-body fadein-bottom">
                 <p class="header header-body display-4">Welcome to blurry.</p>
                 <p class="lead fadein-bottom">First things first...</p>
+                <hr class="my-4">
                 <p class="fadein-bottom" style="width: 50rem;">
                     Welcome! This website is dedicated to all things Elsword!
                     Some upcoming features will include a functioning stat calculator similar to the one that Ashal has, 
@@ -53,8 +54,9 @@
                 <div class="card fadein-bottom" style="width: 40rem;">
                     <div class="card-body">
                         <h2 class="header">Changelog</h2>
+                        <hr class="my-3">
                         <p class="fadein-bottom">
-                            v0.0.2
+                            v0.0.4
                             <p class="fadein-bottom">
                                 4-21-2020
                                 <div class="fadein-bottom">
@@ -66,9 +68,11 @@
                                     <li>Added a Changelog</li>
                                     <li>Created To-do List</li>
                                     <li>Placed a placeholder background</li>
+                                    <li>Completed basic news page</li>
                                     <div class="card" style="width: 20rem; margin-top: 20px;">
                                         <div class="card-body">
                                             <h4 class="header" style="margin: 0;">To-do</h4>
+                                            <hr class="my-3">
                                             <li>Functioning News Page</li>
                                             <li>Functioning Marketplace</li>
                                             <li>Functioning Calculator</li>
