--- a/news.html
+++ b/news.html
@@ -43,7 +43,7 @@
     <div class="container-fluid fadein bg-skin">
         <div class="card mb-3" style="margin-bottom: 0!important;">
             <div class="card-header">
-                    <ul class="nav nav-tabs card-header-tabs" id="myTab" role="navlist">
+                    <ul class="nav navtab-light nav-tabs card-header-tabs" id="myTab" role="navlist">
                         <li class="nav-item">
                             <a class="nav-link active" id="na-news-tab" data-toggle="tab" href="#na" aria-controls="na na-img" aria-selected="true">NA News</a>
                         </li>
