--- a/index.html
+++ b/index.html
@@ -69,6 +69,7 @@
                                     <li>Created To-do List</li>
                                     <li>Placed a placeholder background</li>
                                     <li>Completed basic news page</li>
+                                    <li>Created skeleton for FAQ page</li>
                                     <div class="card" style="width: 20rem; margin-top: 20px;">
                                         <div class="card-body">
                                             <h4 class="header" style="margin: 0;">To-do</h4>
