--- a/index.html
+++ b/index.html
@@ -1,19 +1,28 @@
 <!DOCTYPE html>
 <html xmlns="http://www.w3.org/1999/xhtml">
+
 <head>
     <script type="text/javascript" async="" src="https://www.google-analytics.com/analytics.js"></script>
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+        integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+        integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+        integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+        crossorigin="anonymous"></script>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <link rel="icon" type="image/x-icon" href="favicon/favicon.ico" sizes="16x16">
     <link rel="stylesheet" href="main.css">
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+        integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Product+Sans">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Product+Sans:bold">
     <title>Blurry.</title>
 </head>
+
 <body>
     <div class="container-fluid">
         <h1 class="header">blurry.</h1>
@@ -21,12 +30,18 @@
     </div>
     <nav class="navbar navbar-dark navbar-expand-lg bg-black">
         <a class="navbar-brand active" href="index.html">
-            <svg class="bi bi-house" style="margin-bottom: 6px;" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
-                <path fill-rule="evenodd" d="M2 13.5V7h1v6.5a.5.5 0 00.5.5h9a.5.5 0 00.5-.5V7h1v6.5a1.5 1.5 0 01-1.5 1.5h-9A1.5 1.5 0 012 13.5zm11-11V6l-2-2V2.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5z" clip-rule="evenodd"/>
-                <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 011.414 0l6.647 6.646a.5.5 0 01-.708.708L8 2.207 1.354 8.854a.5.5 0 11-.708-.708L7.293 1.5z" clip-rule="evenodd"/>
-              </svg>
+            <svg class="bi bi-house" style="margin-bottom: 6px;" width="1em" height="1em" viewBox="0 0 16 16"
+                fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                <path fill-rule="evenodd"
+                    d="M2 13.5V7h1v6.5a.5.5 0 00.5.5h9a.5.5 0 00.5-.5V7h1v6.5a1.5 1.5 0 01-1.5 1.5h-9A1.5 1.5 0 012 13.5zm11-11V6l-2-2V2.5a.5.5 0 01.5-.5h1a.5.5 0 01.5.5z"
+                    clip-rule="evenodd" />
+                <path fill-rule="evenodd"
+                    d="M7.293 1.5a1 1 0 011.414 0l6.647 6.646a.5.5 0 01-.708.708L8 2.207 1.354 8.854a.5.5 0 11-.708-.708L7.293 1.5z"
+                    clip-rule="evenodd" />
+            </svg>
         </a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup"
+            aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -47,8 +62,9 @@
                 <hr class="my-4">
                 <p class="fadein-bottom" style="width: 50rem;">
                     Welcome! This website is dedicated to all things Elsword!
-                    Some upcoming features will include a functioning stat calculator similar to the one that Ashal has, 
-                    a player marketplace, and a comprehensive FAQ page. Lots to look forward to, and a much more user-friendly feel on the side!
+                    Some upcoming features will include a functioning stat calculator similar to the one that Ashal has,
+                    a player marketplace, and a comprehensive FAQ page. Lots to look forward to, and a much more
+                    user-friendly feel on the side!
                     Be sure to check out the News it includes both NA and KR!
                 </p>
                 <div class="card fadein-bottom" style="width: 40rem;">
@@ -56,9 +72,9 @@
                         <h2 class="header">Changelog</h2>
                         <hr class="my-3">
                         <p class="fadein-bottom">
-                            v0.0.4
+                            v0.0.8
                             <p class="fadein-bottom">
-                                4-21-2020
+                                4-22-2020
                                 <div class="fadein-bottom">
                                     <li>Added cool new header!</li>
                                     <li>Added super handy navigation bar!</li>
@@ -70,6 +86,7 @@
                                     <li>Placed a placeholder background</li>
                                     <li>Completed basic news page</li>
                                     <li>Created skeleton for FAQ page</li>
+                                    <li>FAQ page was filled in with content</li>
                                     <div class="card" style="width: 20rem; margin-top: 20px;">
                                         <div class="card-body">
                                             <h4 class="header" style="margin: 0;">To-do</h4>
@@ -93,4 +110,5 @@
         </div>
     </div>
 </body>
+
 </html>
